@@ -14,7 +14,7 @@ VMLINUX		= $(KSRC)/vmlinux
 VMLINUXGZ	= $(KSRC)/arch/alpha/boot/vmlinux.gz
 
 # for userspace testing
-# TESTING	= yes
+#TESTING	= yes
 
 # for boot testing
 #CFGDEFS       	= -DDEBUG_ISO -DDEBUG_ROCK -DDEBUG
@@ -38,7 +38,7 @@ ifeq ($(TESTING),)
 CPPFLAGS	= $(CFGDEFS) -I$(TOP)/include -I$(KSRC)/include
 CFLAGS		= $(CPPFLAGS) -D__KERNEL__ -mcpu=ev4 -Os -Wall -Wcast-align -mno-fp-regs -ffixed-8
 else
-CPPFLAGS	= -DTESTING $(CFGDEFS) -I$(TOP)/include
+CPPFLAGS	= -DTESTING $(CFGDEFS) -I$(TOP)/include -I$(KSRC)/include
 CFLAGS		= $(CPPFLAGS) -O -g3 -Wall -D__KERNEL__ -ffixed-8
 endif
 ASFLAGS		= $(CPPFLAGS)
